Responsive design de la newsletter

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
             <!---- Phrase : si cette phrase ne s'affiche... --->
             <tr>
-                <td style="background-color: #E6E6E6; text-align: center;" align="center" height="10">
+                <td style="max-width: 100%; background-color: #E6E6E6; text-align: center;" align="center" height="10">
                     <p style="margin: 5px;">Si cette lettre ne s'affiche pas correctement, <a href="#" style="color: #000; font-weight: bold;">cliquez ici.</a></p>
                 </td>
             </tr>
@@ -20,15 +20,13 @@
 
             <!-----   Logo + Titre de la lettre ------>
             <tr>
-                <td style="width:100%; background-color: #fff;">
+                <td style="max-width:100%; background-color: #fff;">
                     <table style="width: 80%; max-width:750px; text-align: center;" align="center" border="0" cellpadding="0" cellspacing="0">
                        <tr>
-                            <td style="text-align: right;">
-                                <img style="width: 22%;" src="images/logo-top.png" alt="Logo de YoYo">
-                            </td>
-                            <td style="text-align: left;">
-                                <h1 style="margin-left: 10px; font-size: 16px;">Lettre d'information</h1>
-                            </td>
+                           <td  style="width: 100%; padding: 5px;">
+                                <img style="width: 11%; vertical-align: middle;" src="images/logo-top.png" alt="">
+                                <span style="vertical-align:middle;"> Lettre d'information</span>
+                           </td>
                        </tr>
                     </table>
                 </td>
@@ -202,10 +200,10 @@
                             <td>
                                 <table style="width: 100%; vertical-align: top;" valign="top" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td style="width: 33%;">
+                                        <td style="width: 33%; vertical-align: top;">
                                             <img style="width: 100%;" src="images/sisters.jpg" alt="Manifeste chien">
                                         </td>
-                                        <td style="width: 66%; padding-left: 10px;">
+                                        <td style="width: 66%; padding-left: 10px; vertical-align: top;">
                                             <table>
                                                 <tr>
                                                     <td>
@@ -290,10 +288,10 @@
                 <td style="width:100%;">
                     <table style="width: 80%; max-width:750px; padding: 20px 10px 10px 10px; background-color:#fff;" align="center" border="0" cellpadding="0" cellspacing="0">
                         <tr>
-                            <td>
+                            <td style="width: 100%;">
                                 <table style="width: 100%; vertical-align: top;" valign="top" border="0" cellpadding="0" cellspacing="0">
                                     <tr>
-                                        <td style="width: 66%; padding-left: 10px;">
+                                        <td style="width: 66%; padding-left: 10px; vertical-align: top;">
                                             <table>
                                                 <tr>
                                                     <td>
@@ -320,7 +318,7 @@
                                                 </tr>  
                                             </table>
                                         </td>
-                                        <td style="width: 33%;">
+                                        <td style="width: 33%; vertical-align: top;">
                                             <img style="width: 100%;" src="images/Bibi-4retaillee.jpg" alt="Manifeste chien">
                                         </td>
                                     </tr>
@@ -363,52 +361,22 @@
 
             <tr>
                 <td style="width:100%; background: #fff;" align="center">
-                    <table style="width: 80%; max-width: 750px;" text-align: center;" align="center" border="0" cellpadding="0" cellspacing="0">
+                    <table style="width: 80%; max-width: 750px; text-align: center;" align="center" border="0" cellpadding="0" cellspacing="0">
                        <tr>
-                            <td style="width: 20%;">
-                                <table style="width: 100%;" align="center" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td>
-                                            <img src="images/logo-bottom.png" alt="Logo de YoYo">
-                                        </td>
-                                    </tr>
-                                </table>
+                            <td style="width: 30%; text-align: center;">
+                                <img style="width: 100%;" src="images/logo-bottom.png" alt="Logo de YoYo">
                             </td>
-                            <td style="width: 20%;">
-                                <table style="width: 100%;" align="center" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td style="text-align:right; padding-right: 5px;">
-                                            <img src="images/fb.png" alt="Facebook">
-                                        </td>
-                                        <td style="text-align:left; padding-left: 5px;">
-                                            <p style="color: #666;">facebook</p>
-                                        </td>
-                                    </tr>
-                                </table>
+                            <td style="width: 20%; text-align:center;">
+                                <img style="vertical-align: middle;" src="images/fb.png" alt="Facebook">
+                                <span style="font-size: 16px; color: #666; font-weight: bold;">facebook</span>
                             </td>
-                            <td style="width: 20%;">
-                                <table style="width: 100%;" align="center" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td style="text-align:right; padding-right: 5px;">
-                                            <img style="margin: 0;" src="images/twitter.png" alt="Twitter">
-                                        </td>
-                                        <td style="text-align:left; padding-left: 5px;">
-                                            <p style="color: #666;">twitter</p>
-                                        </td>
-                                    </tr>
-                                </table>
+                            <td style="width: 20%; text-align:center;">
+                                <img style="vertical-align: middle;" src="images/twitter.png" alt="Twitter">
+                                <span style="font-size: 16px;  color: #666; font-weight: bold;">twitter</span>  
                             </td>
-                            <td style="width: 20%;">
-                                <table style="width: 100%;" align="center" border="0" cellpadding="0" cellspacing="0">
-                                    <tr>
-                                        <td style="text-align:right; padding-right: 5px;">
-                                            <img src="images/instagram.png" alt="instagram">
-                                        </td>
-                                        <td style="text-align:left; padding-left: 5px;">
-                                            <p style="color: #666;">instagram</p>
-                                        </td>
-                                    </tr>
-                                </table>
+                            <td style="width: 20%; text-align:center;">
+                                <img style="vertical-align: middle;" src="images/twitter.png" alt="Instagram">
+                                <span style="font-size: 16px; color: #666; font-weight: bold;">instagram</span>
                             </td>
                        </tr>
                     </table>
@@ -419,7 +387,7 @@
 
             <!---------- espace vertical + Bouton se désinscrire + espace vertical -------->
             <tr>
-                <td style="width:100%;">
+                <td style="max-width:100%;">
                     <table style="width: 80%; max-width:750px; text-align: center;" align="center" border="0" cellpadding="0" cellspacing="0">
                         <!----- Espace verticale-->
                         <tr>
@@ -428,7 +396,7 @@
                         <!----- Titre : Le programme du Ying Yang....-->
                         <tr>
                             <td width="100">
-                                <p><a style="color: #fff;" href="#">Se désinscrire de la liste</a></p>
+                                <p><a style="color: #efefef;" href="#">Se désinscrire de la liste</a></p>
                             </td>
                         </tr>
                         <!----- Espace verticale-->
